--- a/source/changelogs/v4.3.0.rst
+++ b/source/changelogs/v4.3.0.rst
@@ -107,6 +107,11 @@ Others
 - The method signature of ``Forge::addKey()`` has changed. An additional optional parameter ``$keyName`` has been added.
 - The method signature of ``Forge::addPrimaryKey()`` has changed. An additional optional parameter ``$keyName`` has been added.
 - The method signature of ``Forge::addUniqueKey()`` has changed. An additional optional parameter ``$keyName`` has been added.
+- The following method has an additional ``$asQuery`` parameter. When set to ``true`` the method returns a stand alone SQL query.
+    - ``CodeIgniter\Database\Forge::_processPrimaryKeys()``
+- In addition to the added ``$asQuery`` parameter above the following methods also now return an array.
+    - ``CodeIgniter\Database\Forge::_processIndexes()``
+    - ``CodeIgniter\Database\Forge::_processForeignKeys()``
 
 Enhancements
 ************
