--- a/source/changelogs/v4.3.0.rst
+++ b/source/changelogs/v4.3.0.rst
@@ -58,8 +58,19 @@ Others
 Interface Changes
 =================
 
+OutgoingRequestInterface
+------------------------
+
+- Added new ``OutgoingRequestInterface`` that represents an outgoing request.
+- Added new ``OutgoingRequest`` class that implements ``OutgoingRequestInterface``.
+- Now ``RequestInterface`` extends ``OutgoingRequestInterface``.
+- Now ``CURLRequest`` extends ``OutgoingRequest``.
+- Now ``Request`` extends ``OutgoingRequest``.
+
+Others
+------
+
 - Added missing ``getProtocolVersion()``, ``getBody()``, ``hasHeader()`` and ``getHeaderLine()`` method in ``MessageInterface``.
-- Now ``RequestInterface`` extends ``MessageInterface``.
 - Now ``ResponseInterface`` extends ``MessageInterface``.
 - Added missing ``ResponseInterface::getCSP()`` (and ``Response::getCSP()``), ``ResponseInterface::getReasonPhrase()`` and ``ResponseInterface::getCookieStore()`` methods.
 - See also `Validation Changes`_.
