Fix several grammar errors and typos (#6738)
* Fixed several grammar errors and typos
* Update user_guide_src/source/tutorial/index.rst
* Update user_guide_src/source/installation/repositories.rst

Co-authored-by: kenjis <kenji.uui@gmail.com>
Co-authored-by: John Paul E. Balandan, CPA <paulbalandan@gmail.com>

--- a/source/changelogs/v4.0.0-beta.3.rst
+++ b/source/changelogs/v4.0.0-beta.3.rst
@@ -179,7 +179,7 @@ PRs merged
 - #1943 Model, Entity, Exception & Migration test cases
 - #1939 Remove section that prevents hotlinking
 - #1938 Database typos changes
-- #1936 Docs: improce app testing writeup
+- #1936 Docs: improve app testing writeup
 - #1935 Update phpunit.xml scripts. Fixes #1932
 - #1933 having (Is NULL deletion)
 - #1931 Toolbar IE11 fix
