--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -58,8 +58,11 @@ Helpers and Functions
 
 Others
 ======
-- **View:** Added optional 2nd parameter ``$saveData`` on ``renderSection()`` to prevent from auto cleans the data after displaying. See :ref:`View Layouts <creating-a-layout>` for details.
 
+- **View:** Added optional 2nd parameter ``$saveData`` on ``renderSection()`` to prevent from auto cleans the data after displaying. See :ref:`View Layouts <creating-a-layout>` for details.
+- **Auto Routing (Improved)**: Now you can use URI without a method name like
+  ``product/15`` where ``15`` is an arbitrary number.
+  See :ref:`controller-default-method-fallback` for details.
 
 Message Changes
 ***************
