--- a/source/changelogs/v4.3.2.rst
+++ b/source/changelogs/v4.3.2.rst
@@ -27,6 +27,8 @@ Deprecations
 Bugs Fixed
 **********
 
+* Fixed : ``Session`` Redis connect to protocol TLS
+
 See the repo's
 `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_
 for a complete list of bugs fixed.
