--- a/source/changelogs/v4.3.2.rst
+++ b/source/changelogs/v4.3.2.rst
@@ -27,7 +27,12 @@ Deprecations
 Bugs Fixed
 **********
 
-* Fixed : ``Session`` Redis connect to protocol TLS
+- **QueryBuilder:** ``where()`` generates incorrect SQL when using ``RawSql``
+- **QueryBuilder:** ``RawSql`` passed to ``set()`` disappears without error
+- **Session:** Can't connect to Redis with ``RedisHandler`` over TLS
+- **Autoloader:** May not add Composer package's namespaces
+- **Parser:** ``!`` does not work if delimiters are changed
+- **UserGuide:** Added missing items in ChangeLog and Upgrading Guide v4.3.0
 
 See the repo's
 `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_
