--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -29,8 +29,7 @@ Method Signature Changes
 Enhancements
 ************
 
-- Added ``DownloadResponse::inline()`` method that sets the ``Content-Disposition: inline`` header to display the
-file in the browser.
+- Added ``DownloadResponse::inline()`` method that sets the ``Content-Disposition: inline`` header to display the file in the browser.
 
 Commands
 ========
@@ -73,8 +72,7 @@ Message Changes
 Changes
 *******
 
-- The ``DownloadResponse`` class, when generating response headers, does not replace the ``Content-Disposition`` header
-if it was previously specified.
+- The ``DownloadResponse`` class, when generating response headers, does not replace the ``Content-Disposition`` header if it was previously specified.
 
 Deprecations
 ************
