--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -32,6 +32,9 @@ Enhancements
 Commands
 ========
 
+- Now ``spark routes`` command can specify the host in the request URL.
+  See :ref:`routing-spark-routes-specify-host`.
+
 Testing
 =======
 
