--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -83,6 +83,8 @@ Changes
 Deprecations
 ************
 
+- **Entity:** ``Entity::setAttributes()`` is deprecated. Use ``Entity::injectRawData()`` instead.
+
 Bugs Fixed
 **********
 
