--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -47,6 +47,11 @@ Method Signature Changes
   ``RouteCollection::__construct()``.
 - **Validation:** The method signature of ``Validation::check()`` has been changed.
   The ``string`` typehint on the ``$rule`` parameter was removed.
+- **Session:** The second parameter of ``Session::__construct()`` has been
+  changed from ``Config\App`` to ``Config\Session``.
+- **Session:** The first parameter of ``__construct()`` in ``BaseHandler``,
+  ``DatabaseHandler``, ``FileHandler``, ``MemcachedHandler``, and ``RedisHandler``
+  has been changed from ``Config\App`` to ``Config\Session``.
 
 Enhancements
 ************
@@ -127,6 +132,7 @@ Changes
 
 - **Images:** The default quality for WebP in ``GDHandler`` has been changed from 80 to 90.
 - **Config:** The deprecated Cookie items in **app/Config/App.php** has been removed.
+- **Config:** The deprecated Session items in **app/Config/App.php** has been removed.
 - **Config:** Routing settings have been moved to **app/Config/Routing.php** config file.
   See :ref:`Upgrading Guide <upgrade-440-config-routing>`.
 - **DownloadResponse:** When generating response headers, does not replace the ``Content-Disposition`` header if it was previously specified.
@@ -147,6 +153,10 @@ Deprecations
 - **Autoloader:** ``Autoloader::sanitizeFilename()`` is deprecated.
 - **CodeIgniter:** ``CodeIgniter::$returnResponse`` property is deprecated. No longer used.
 - **RedirectException:** ``\CodeIgniter\Router\Exceptions\RedirectException`` is deprecated. Use \CodeIgniter\HTTP\Exceptions\RedirectException instead.
+- **Session:** The property ``$sessionDriverName``, ``$sessionCookieName``,
+  ``$sessionExpiration``, ``$sessionSavePath``, ``$sessionMatchIP``,
+  ``$sessionTimeToUpdate``, and ``$sessionRegenerateDestroy`` in ``Session`` are
+  deprecated, and no longer used. Use ``$config`` instead.
 
 Bugs Fixed
 **********
