docs: add user guide

--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -62,6 +62,9 @@ Others
 Model
 =====
 
+- Added special getter/setter to Entity to avoid method name conflicts.
+  See :ref:`entities-special-getter-setter`.
+
 Libraries
 =========
 
