--- a/source/changelogs/v4.3.3.rst
+++ b/source/changelogs/v4.3.3.rst
@@ -9,6 +9,11 @@ Release Date: Unreleased
     :local:
     :depth: 3
 
+SECURITY
+********
+
+- **Email:** Added missing TLS 1.3 support.
+
 BREAKING
 ********
 
