docs: update docs

--- a/source/changelogs/v4.3.3.rst
+++ b/source/changelogs/v4.3.3.rst
@@ -13,6 +13,7 @@ SECURITY
 ********
 
 - **Email:** Added missing TLS 1.3 support.
+- **Text Helper:** The :php:func:`random_string()` type **numeric** is now cryptographically secure.
 
 BREAKING
 ********
