docs: deprecate random_string() basic,md5,sha1

--- a/source/changelogs/v4.3.4.rst
+++ b/source/changelogs/v4.3.4.rst
@@ -21,6 +21,9 @@ Changes
 Deprecations
 ************
 
+- **Text Helper:** :php:func:`random_string()`'s type ``basic``, ``md5``, and
+  ``sha1`` are deprecated. They are not cryptographically secure.
+
 Bugs Fixed
 **********
 
