docs: update docs

--- a/source/changelogs/v4.3.4.rst
+++ b/source/changelogs/v4.3.4.rst
@@ -35,6 +35,19 @@ Redirect Status Code
   always be used when you don't specify a status code. In previous versions,
   302 might be changed.
 
+Forge::modifyColumn()
+---------------------
+
+- The :ref:`$forge->modifyColumn() <db-forge-modifyColumn>` has been fixed. Due
+  to a bug, in previous versions, SQLite3/Postgres/SQLSRV might change
+  ``NULL``/``NOT NULL`` unpredictably.
+- In previous versions, the OCI8 driver did not change ``NULL``/``NOT NULL``
+  when you don't specify ``null`` value.
+- Now in all database drivers ``$forge->modifyColumn()`` always sets ``NULL``
+  when you don't specify ``null`` value.
+- The ``NULL``/``NOT NULL`` change may still be unexpectedly, it is recommended
+  to always specifiy ``null`` value.
+
 Message Changes
 ***************
 
