clear response headers between requests in CURLRequest when $shareOptions is disabled

--- a/source/changelogs/v4.3.4.rst
+++ b/source/changelogs/v4.3.4.rst
@@ -27,6 +27,8 @@ Deprecations
 Bugs Fixed
 **********
 
+- **CURLRequest:** Clear response headers between requests when ``Config\CURLRequest::$shareOptions`` is disabled.
+
 See the repo's
 `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_
 for a complete list of bugs fixed.
