--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -104,6 +104,8 @@ Changes
   So if you installed CodeIgniter under the folder that contains the special
   characters like ``(``, ``)``, etc., CodeIgniter didn't work. Since v4.4.0,
   this restriction has been removed.
+- **Config:** Routing settings have been moved to ``Config\Routing`` config file.
+- The default location for new projects Routes.php file has been moved to `app/Routes.php`. This can be modified in the `Config/Routing.php` file.
 
 Deprecations
 ************
