--- a/source/changelogs/v4.3.4.rst
+++ b/source/changelogs/v4.3.4.rst
@@ -27,7 +27,7 @@ Deprecations
 Bugs Fixed
 **********
 
-- **CURLRequest:** Clear response headers between requests when ``Config\CURLRequest::$shareOptions`` is disabled.
+- **CURLRequest:** Clear response headers between requests.
 
 See the repo's
 `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_
