--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -96,7 +96,10 @@ Others
 - **View:** Added optional 2nd parameter ``$saveData`` on ``renderSection()`` to prevent from auto cleans the data after displaying. See :ref:`View Layouts <creating-a-layout>` for details.
 - **Auto Routing (Improved)**: Now you can route to Modules.
   See :ref:`auto-routing-improved-module-routing` for details.
-- **Auto Routing (Improved)**: Now you can use URI without a method name like
+- **Auto Routing (Improved):** Now you can pass arguments to the the default
+  controller that is omitted in the URI.
+  See :ref:`controller-default-controller-fallback` for details.
+- **Auto Routing (Improved):** Now you can use URI without a method name like
   ``product/15`` where ``15`` is an arbitrary number.
   See :ref:`controller-default-method-fallback` for details.
 - **Filters:** Now you can use Filter Arguments with :ref:`$filters property <filters-filters-filter-arguments>`.
