--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -35,6 +35,8 @@ Interface Changes
 Method Signature Changes
 ========================
 
+- The third parameter ``Routing $routing`` has been added to ``RouteCollection::__construct()``.
+
 Enhancements
 ************
 
@@ -97,6 +99,7 @@ Changes
 *******
 
 - **Config:** The deprecated Cookie items in **app/Config/App.php** has been removed.
+- **Config:** Routing settings have been moved to **app/Config/Routing.php** config file.
 - **DownloadResponse:** When generating response headers, does not replace the ``Content-Disposition`` header if it was previously specified.
 - **Autoloader:** Before v4.4.0, CodeIgniter autoloader did not allow special
   characters that are illegal in filenames on certain operating systems.
@@ -104,7 +107,6 @@ Changes
   So if you installed CodeIgniter under the folder that contains the special
   characters like ``(``, ``)``, etc., CodeIgniter didn't work. Since v4.4.0,
   this restriction has been removed.
-- **Config:** Routing settings have been moved to ``Config\Routing`` config file.
 
 Deprecations
 ************
