--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -100,6 +100,7 @@ Changes
 
 - **Config:** The deprecated Cookie items in **app/Config/App.php** has been removed.
 - **Config:** Routing settings have been moved to **app/Config/Routing.php** config file.
+  See :ref:`Upgrading Guide <upgrade-440-config-routing>`.
 - **DownloadResponse:** When generating response headers, does not replace the ``Content-Disposition`` header if it was previously specified.
 - **Autoloader:** Before v4.4.0, CodeIgniter autoloader did not allow special
   characters that are illegal in filenames on certain operating systems.
