--- a/source/changelogs/v4.3.4.rst
+++ b/source/changelogs/v4.3.4.rst
@@ -12,6 +12,29 @@ Release Date: Unreleased
 BREAKING
 ********
 
+Behavior Changes
+================
+
+.. _v434-redirect-status-code:
+
+Redirect Status Code
+--------------------
+
+- Due to a bug, in previous versions, when using HTTP/1.1 or later the status
+  code of the actual redirect response might be changed even if a status code was
+  specified. For example, for a GET request, 302 would change to 307; for a POST
+  request, 307 and 302 would change to 303.
+- Starting with this version, if you specify a status code in
+  :ref:`redirect <response-redirect-status-code>`, that code will always be used
+  in the response.
+- The default code for GET requests has been corrected from 307 to 302 when using
+  HTTP/1.1 or later.
+- The default code for HEAD and OPTIONS requests has been corrected from 303 to
+  307 when using HTTP/1.1 or later.
+- In ``$routes->addRedirect()``, 302 is specified by default. Therefor 302 will
+  always be used when you don't specify a status code. In previous versions,
+  302 might be changed.
+
 Message Changes
 ***************
 
